EU judgment and opinion links; resolve #20
Squashed commit of the following:

commit f9c6231501df2eeac529e14a88ee5ce530576548
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 8 21:28:47 2021 +0800

    disable unimplemented jurisdictions

commit dd85f6be80d9bebe6aae76b2673fff86ca36e9eb
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 8 21:20:49 2021 +0800

    🐛 bug: fix LRS bug

commit 5faaf30d26180e4485fe03cd59b84d43f8261416
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 8 21:01:57 2021 +0800

    EU judgment and opinion links; resolve #20

commit ab348f7027ce2818a02db3624a1744a418a193a0
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 8 19:47:07 2021 +0800

    📦 dep: update

--- a/src/Popup/QueryResult.scss
+++ b/src/Popup/QueryResult.scss
@@ -8,40 +8,60 @@
   align-content: flex-start;
   box-sizing: border-box;
 
-  > .result {
+  >.result {
     padding-bottom: 1rem;
-    width: 95%;
+    width: 100%;
     box-sizing: border-box;
 
-    > .details {
+    >.details {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
       margin-bottom: 0.5rem;
 
-      > .left {
-        > .database {
+      >.left {
+        >.database {
           margin-left: 0.4rem;
           box-sizing: border-box;
         }
       }
 
-      > .right {
-
-      }
+      >.right {}
     }
 
-    > .case-name,
-    > .legislation-name {
+    >a.case-name,
+    >a.legislation-name {
       text-align: left;
+      text-decoration: none;
+      font-size: 110%;
+
+      &[href]:hover {
+        text-decoration: underline;
+      }
     }
 
     p {
       margin: 0;
     }
 
-    & + .result {
+    >.links {
+      display: flex;
+      flex-direction: row;
+      margin-top: 0.5rem;
+
+      >span+.link {
+        margin-left: 1rem;
+      }
+
+      >.link {
+        +.link {
+          margin-left: 1rem;
+        }
+      }
+    }
+
+    &+.result {
       padding-top: 1rem;
       border-top: 1px solid $border-color;
     }
